--- a/style.css
+++ b/style.css
@@ -2,15 +2,65 @@ body{
   background-color:whitesmoke;
   font-family: 'Poppins', sans-serif;
 }
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+hr{
+    width: 100%;
+    margin-bottom: 27px;
+    border: 1px solid #3A3A3A;;
+}
+/*-------------------------------------------------------
+ Header section start here 
+ --------------------------------------------------------*/
+.header-content{
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+margin:50px;
+
+}
+.header-content > h3{
+    font-weight: bold;
+    font-size: 24px;
+    color:#3A3A3A;
+    margin-left: 20px;
+    
+}
+.header-list ul{
+    display: flex;
+}
+.header-list li{
+    list-style: none;
+    margin-left: 20px;
+    font-size: 18px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: background-color 1s;
+}
+.header-list li:hover{
+    background-color: slategray;
+}
+.header-list li a{
+    text-decoration: none;
+    color: black;
+}
 /*-------------------------------------------
  influencer-Journey section start here 
  --------------------------------------------*/
  .influencer{
      display: flex;
+     margin: 0px 50px;
+ }
+ .influencer-Journey {
+     width: 50%;
+     margin-left: 20px;
  }
  .influencer-Journey h1{
     font-size: 52px;
     line-height: 70px;
+    margin-bottom: 0px;
     color:#3A3A3A;
  }
 .influencer-button{
@@ -29,12 +79,13 @@ body{
 .influencer-image img{
     width: 440px;
     height: 414px;
+    margin-left: 100px;
 }
 .influencer-image{
     transition: transform 2s linear;
 }
 .influencer-image:hover{
-    transform: scale(1.2) rotate(360deg);
+    transform: scale(.5) rotate(360deg);
     border-radius: 20px;
 }
 
@@ -53,13 +104,12 @@ body{
 .collections{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    
 }
  .collection-item{
      background-color: white;
      width: 329px;
      height: auto;
-     margin-top: 30px;
+     margin: 30px;
    padding-top: 15px;
    padding-bottom: 15px;
    border-radius: 5px;
@@ -89,6 +139,39 @@ body{
      color: #5E6366;
      margin-left: 5px;
  }
+ .scroll-button{
+     text-align: right;
+     margin-right: 28px;
+ }
+ .scroll-button a{
+     color: #E02C6D;
+     font-weight: bold;
+     text-decoration: none; 
+ }
+ /*------------------------------------------------
+  Feature section start here
+  ------------------------------------------------- */
+ .our-feature{
+     width: 85%;
+     margin: 40px 0;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     text-align: center;
+
+ }
+
+ .feature-image img{
+     width: 300px;
+     height: 400px;
+     margin: 20px;
+     border-radius: 10px;
+     box-shadow: 8px 8px 20px black;
+     transition: transform 1s;
+ } 
+ .feature-image img:hover{
+     transform: scale(1.1);
+ }
  /*-----------------------------------------------
   Footer section start here 
   ------------------------------------------------*/
@@ -116,3 +199,30 @@ body{
     border-radius: 100%;
     font-size: 20px;
   }
+
+  /* ------------------------------------------
+          Media Queries
+ --------------------------------------*/
+ /* mobile device */
+ @media only screen and (max-width:688px) {
+     .header-content, .collections {
+         grid-template-columns: repeat(1, 1fr);
+         flex-direction: column;
+        
+     }
+     .container, .influencer{
+         flex-direction: column;
+         align-items: center;
+         width: 100%;
+     }
+     .header-list ul{
+        flex-direction: column;
+       text-align: center;
+       margin-right: 40px;
+     }
+     .influencer-Journey h1{
+         line-height: normal;
+
+     }
+
+ }
